2010-02-05  Charlie Zender  <zender@uci.edu>

	* Cleanup ncbo.c

2010-01-29  Henry Butowsky  <henryb@hush.com> 

	* Tidy-up value_list action in tree parser.
	  Added value_list_string for NC_STRING

	* Added ncap_typ_hgh() to libnco

2010-01-26  Charlie Zender  <zender@uci.edu>

	* As of 20091030 NCO_TYP_INT defaults to int rather than long
	Following changes bring nomenclature into alignment with this

	* Change NC_INT variable names from *_lng to *_ntg

	* Change ptr_typ union for NC_INT from lp to ip

	* Change val_typ union for NC_INT from l to i

	* Remove nco_gmm.[ch] to avoid Burkardt copyright
	Gamma functions now supplied by GSL.

	* Replace " != NULL" and " != NULL_CEWI" with ""
	This is just code cleanup which is always valid
	When pointer values are evaluated as boolean conditions, it is
	identical to comparing the pointer to NULL.
	Hence code now has, e.g., if(cmd_ln) ... instead of if(cmd_ln != NULL)
	Could/should also replace "foo == NULL" with !foo?
	
2010-01-19  Charlie Zender  <zender@uci.edu>

	* Workaround ncoGrammer.g dependence on NC_MAX_INT which DNE 
	in netcdf.h until ~2009

2010-01-19  Henry Butowsky  <henryb@hush.com> 
	
	* Add chapter on "GSL Least-Squares Fitting" to ncap2 manual

2010-01-18  Charlie Zender  <zender@uci.edu>

	* Fix out of range index in fmc_gsl_cls.c

2010-01-14  Charlie Zender  <zender@uci.edu>

	* Patch configure.in for broken GSL installations like bluefire's, 
	where GSL exists though gsl-config does not

	* Only attempt duplicating netCDF4 settings when output is netCDF4
	Do not rely on no-ops from netCDF3 and netCDF4-classic files

2010-01-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.1 release procedure:
	Changes since nco-4_0_0: fxm
	cd ~/nco;cvs tag -d nco-4_0_1;cvs tag -d nco-4_0_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.1 release"
	cvs tag -c nco-4_0_1;cvs tag -c nco-4_0_1-1

	* Patch --enable-netcdf-4 implementation

2010-01-05  Charlie Zender  <zender@uci.edu>
